--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -12,3 +12,5 @@ jobs:
       uses: snyk/actions/scala@master
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        args: --severity-threshold=high
